Change blend mode

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <code>box-sizing: border-box</code>
       </p>
       <p class="example-3">
-        <strong>Example 3: </strong><code>offsetTop/Left</code> &
+        <strong>Solution 3: </strong><code>offsetTop/Left</code> &
         <code>clientHeight/Width</code>
       </p>
       <p>
